tests/machine/x/ocaml/for_loop.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/for_loop.ml", line 4, characters 18-19:
4 |     print_endline i
                      ^
Error: This expression has type int but an expression was expected of type
         string


Context (around line 4):
   2 | let () =
   3 |   for i = 1 to 4 do
   4 |     print_endline i
   5 |   done
   6 | 
