tests/machine/x/ocaml/for_loop.ml

let () =
  for i = 1 to 4 do
    print_endline i
  done
